# Pixee

./: CMakeLists.txt  Canvas.cpp  Canvas.h  Image.cpp  Image.h  LICENSE  main.cpp
src/: Action.h  ActionPerformer.cpp  ActionPerformer.h  Canvas.cpp  Canvas.h  DragController.cpp  DragController.h  MyFrame.cpp  MyFrame.h  main.cpp
src/actions/: DrawAction.cpp  DrawAction.h
